--- a/src/components/Popup.css
+++ b/src/components/Popup.css
@@ -14,8 +14,8 @@
   margin: auto auto;
   height: 80lvh;
   width: 70lvw;
-  min-height: 40rem;
-  min-width: 60rem;
+  min-height: 30rem;
+  min-width: 50rem;
   border-radius: 1rem;
   text-align: center;
 }
